# mongo-rust-vector-search-llm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config-example.yaml
src/: config.rs  embedder.rs  main.rs
src/store/: mod.rs  mongo_store.rs  qdrant_store.rs
