[package]
name = "mongo-rust-vector-search-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
tokenizers = "0.22.2"
mongodb = "3.5.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
hf-hub = "0.5.0"
log = "0.4.29"
