[package]
name = "mongo-rust-vector-search-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
candle-core = { version = "0.9.2", features = ["cuda"] }
candle-transformers = { version = "0.9.2", features = ["cuda"] }
candle-nn = { version = "0.9.2", features = ["cuda"] }
tokenizers = "0.22.2"
mongodb = "3.5.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
hf-hub = "0.5.0"
log = "0.4.29"
futures-util = "0.3.32"
