[package]
name = "mongo-rust-vector-search-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
candle-core = { version = "0.9.2", features = ["cuda"] }
candle-transformers = { version = "0.9.2", features = ["cuda"] }
candle-nn = { version = "0.9.2", features = ["cuda"] }
futures-util = "0.3.32"
hf-hub = "0.5.0"
log = "0.4.29"
mongodb = "3.5.1"
qdrant-client = "1.17.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokenizers = "0.22.2"
tokio = { version = "1", features = ["full"] }
uuid = "1.22.0"
